DEV-005: record CI confirmation (run 35080743961, commit 277db5e), close out
CI is green: 9/9 tests pass, detekt/ktlint clean. DEV-005 (Room
Persistence Foundation) is closed.

- PROJECT_STATE.md: DEV-005 findings updated with the CI-confirmed green
  run; VERIFICATION DEBT entry closed (was CI-pending, now CI-verified).
- DEVELOPMENT_LOG.md: full 6-iteration CI retrospective appended,
  summarizing each of the six real failures and their fixes.
- ANTI_ERROR_STANDARD.md: new §12 — two durable rules for future Android/
  Robolectric modules (match jvmToolchain to a module with real
  CI-verified tests, not the nearest-looking sibling; use Robolectric's
  full documented --add-opens set from the start, not a guessed subset).

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01PrHDuPVunttR8EqsnVoiiL